Avoid weird navbar collapse on small screens

--- a/src/components/navbar/index.module.css
+++ b/src/components/navbar/index.module.css
@@ -34,7 +34,7 @@
     padding-bottom : 10px ;
     padding-left: 15px;
     padding-right: 15px;
-    margin-left: 10px;
+    margin-left: 14px;
 }
 
 #topNavbar a.topNavLink:hover,
